Delete unused and change the path

--- a/slides/index.html
+++ b/slides/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <script type="text/javascript">
-      window.location.pathname = '/chapter-1.html';
+      window.location.pathname = '/slides/chapter-1.html';
     </script>
   </body>
 </html>
